同步最新代码

--- a/app/components/common/atable.less
+++ b/app/components/common/atable.less
@@ -7,6 +7,13 @@
       font-size: 22px;
       color: #49a9ee;
     }
+    .operators> *{
+      float: right;
+    }
+    .operators> button{
+      margin: 0 5px;
+    }
+
   }
   .table_canvas{
     margin: 0 20px;
