--- a/app/components/home/home.less
+++ b/app/components/home/home.less
@@ -1,6 +1,7 @@
 @c-white: #fff;
 body{
-  overflow-x: hidden;
+  min-width: 400px;
+  overflow: auto;
 }
 #root{
   min-height: 100vh;
@@ -11,4 +12,22 @@ body{
   vertical-align: middle;
   text-align: center;
   margin: 15px 0;
+}
+
+.ant-confirm-btns{
+  button:first-child{
+    float: right;
+    margin-left: 10px;
+  }
+}
+.header_login{
+  color: @c-white;
+  font-size: 14px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 2rem;
+  .name{
+
+  }
 }
