--- a/app/components/onlineUsers/filterContent/filterContent.less
+++ b/app/components/onlineUsers/filterContent/filterContent.less
@@ -1,22 +1,52 @@
 
 .filter_container{
   margin-bottom: 8px;
-  .opt_btn{
+  .opt_btns{
     margin: 3px 10px 3px 5px;
-  }
-  @media (min-width: 992px){
-    .opt_btn{
-      margin-right: 15px;
+    >button{
+      margin-right: 0.6rem;
     }
   }
-  @media (min-width: 1200px){
-    .opt_btn{
-      margin-right: 40px;
+  .opt_btns>div{
+     display: inline-block;
+  }
+  @media (max-width: 768px){
+    .opt_btns button{
+      margin-top: .2rem;
     }
   }
-  @media (min-width: 1600px){
-    .opt_btn{
-      margin-right: 20px;
+
+  .opt_user_num{
+    text-align: right;
+    float: right;
+    color: #108ee9;
+    top: 16px;
+    margin-top: -32px;
+    right: 12px;
+    .number{
+      font-size: 38px;
+      font-weight: bold;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    .subtitle{
+      font-size: 16px;
     }
   }
+
+  //@media (min-width: 992px){
+  //  .opt_btns{
+  //    margin-right: 15px;
+  //  }
+  //}
+  //@media (min-width: 1200px){
+  //  .opt_btns{
+  //    margin-right: 40px;
+  //  }
+  //}
+  //@media (min-width: 1600px){
+  //  .opt_btns{
+  //    margin-right: 20px;
+  //  }
+  //}
 }
