--- a/app/components/onlineUsers/onlineUserList/onlineUserList.less
+++ b/app/components/onlineUsers/onlineUserList/onlineUserList.less
@@ -1,6 +1,20 @@
 .us_cantainer{
   padding: 10px 15px;
   background: #cccccc;
+  height: 100vh;
+  .group_name{
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 20px;
+    color: #888383;
+
+    .count{
+      padding-left: 10px;
+      .ant-badge{
+        top: -2px;
+      }
+    }
+  }
 }
 .no_margin{
   margin: 0!important;
@@ -19,3 +33,4 @@
   display: block;
   padding-left: 40px;
 }
+
